<merge xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" >


<!--Signup form -->

<ScrollView
    android:id="@+id/signup_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"/>


        <!-- Username Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            >
            <EditText  android:id="@+id/username_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/colorDescription"
                android:textColor="@color/colorDescription"
                android:fontFamily="sans-serif-condensed"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <EditText  android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/colorDescription"
                android:textColor="@color/colorDescription"
                android:fontFamily="sans-serif-condensed"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-condensed"
                android:textColorHint="@color/colorDescription"
                android:textColor="@color/colorDescription"
                android:hint="@string/prompt_password"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Password Again Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/password_again_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:fontFamily="sans-serif-condensed"
                android:textColorHint="@color/colorDescription"
                android:textColor="@color/colorDescription"
                android:hint="@string/prompt_password_again"/>
        </android.support.design.widget.TextInputLayout>



        <Button
            android:id="@+id/signup_button_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_again_edit_text"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:paddingLeft="32dp"
            android:paddingRight="32dp"
            android:textColor="@color/button_text_color"
            android:background="@drawable/login_button"
            android:text="@string/signup"
            android:fontFamily="sans-serif-condensed"
            android:onClick="signup"/>

    </LinearLayout>
</ScrollView>

</merge>
